k8s/Game-letsencrtypt/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
  - host: game-app.am-devops.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yakuphan-devops
            port:
              number: 80
  tls:
    - hosts:
      - game-app.am-devops.com
      secretName: game-app-tls
